# Buf

./: CMakeLists.txt  buffer.cpp  buffer.h  main.cpp
